<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content" android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/teamlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamlogo"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:text="@string/teamname"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/teamlogo"
        android:id="@+id/team_name" />
    <TextView
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team_name"
        android:layout_toEndOf="@+id/teamlogo"
        android:id="@+id/date" />
</RelativeLayout>